--- a/src/styles/components/AddUser.css
+++ b/src/styles/components/AddUser.css
@@ -8,13 +8,13 @@
 
     right: 0;
     bottom: 0;
-    background-color: white;
+    background-color: #0E1F40;;
 
     cursor: pointer;
 }
 .button-add svg{
     width: 100%;
-    color: #0dcaf0;
+    color: #F2B705;
 }
 
 .add-user-container{
