--- a/src/styles/components/User.css
+++ b/src/styles/components/User.css
@@ -1,22 +1,51 @@
 
-
-.userlist-header{
+.userlist-container{
     width: 100%;
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    background-color: #0E1F40;
+    color: white;
+    padding: 20px 0px;
 }
 
-.userlist-body{
+.userlist-input{
+    width: 80%;
+    margin-top: 20px;
+    margin-bottom: 30px;
+}
+.userlist-input input{
     width: 100%;
+    height: 25px;
+    padding: 5px;
+}
+
+.userlist-header,
+.userlist-body-item{
+    width: 80%;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
+    padding: 20px 10px;
+}
+.userlist-header{
+    background-color: #F23838;
+    color: white;
 }
 
 .userlist-body-item{
-    display: flex;
-    justify-content: space-around;
-
-    padding: 20px;
-
     border-bottom: 1px solid rgb(210, 210, 210);
+    color: white;
 }
+
+.userlist-body-item .button-primary{
+    color: white;
+    border: 3px solid #F23838;
+    background-color: inherit;
+}
+
+.userlist-body-item .button-primary:hover{
+    background-color: #F23838;
+}
+
