--- a/src/styles/components/AddUser.css
+++ b/src/styles/components/AddUser.css
@@ -18,7 +18,8 @@
 }
 
 .add-user-container{
-    width: 40vw;
+    color: rgb(49, 49, 49);
+    width: 60vw;
     min-height: 30vh;
     display: flex;
     flex-direction: column;
@@ -26,25 +27,37 @@
     align-items: center;
 }
 
-.add-user-container-item{
+.add-user{
     width: 80%;
     display: flex;
     flex-direction: column;
     align-content: flex-start;
 }
 
-.add-user-container-item input {
+
+.add-user input {
+    width: 100%;
     margin-top: 5px;
     margin-bottom: 15px;
     padding: 5px;
 }
 
-.add-user-container-button{
-    width: 80%;
-}
-.add-user-container-button button{
+
+.add-user-button button{
     cursor: pointer;
     width: 100%;
     padding: 15px;
     background-color: #0dcaf0;
+}
+
+@media (max-width:820px){
+    .add-user-container{
+        width: 80vw;
+    }
+}
+
+@media (max-width:620px){
+    .add-user-container{
+        width: 90vw;
+    }
 }
