--- a/src/styles/components/User.css
+++ b/src/styles/components/User.css
@@ -1,5 +1,5 @@
 
-.userlist-container{
+.userlist-container-main{
     width: 100%;
     min-height: 100vh;
     display: flex;
@@ -8,43 +8,122 @@
     align-items: center;
     background-color: #0E1F40;
     color: white;
-    padding: 20px 0px;
 }
 
-.userlist-input{
-    width: 80%;
-    margin-top: 20px;
-    margin-bottom: 30px;
+.userlist-container{
+    width: 90%;
 }
-.userlist-input input{
+.userlist-container > * {
+    margin: 25px 0px;
+}
+
+.userlist-input {
     width: 100%;
-    height: 25px;
-    padding: 5px;
-}
-
-.userlist-header,
-.userlist-body{
-    width: 80%;
-    padding: 20px 10px;
-}
-.userlist-header{
-    background-color: #F23838;
-    color: white;
-}
-
-.userlist-body{
-}
-.userlist-body-item{
     overflow: hidden;
 }
-.userlist-body-item .button-primary{
-    width: 80%;
+.userlist-input input{
+    padding: 7px;
+    width: 100%;
+}
+
+.userlist-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 0;
+    padding: 0;
+    table-layout: fixed;
+}
+
+.userlist-table th,
+.userlist-table  td {
+    padding: .625em;
+    overflow: hidden ;
+    text-align: left;
+}
+  
+.userlist-table th {
+    font-size: .85em;
+    letter-spacing: .1em;
+    text-transform: uppercase;
+    background-color: #F23838;
+}
+.userlist-table tr {
+    padding: .35em;
+}
+  
+
+.userlist-table tr:nth-child(even){
+    background-color: #678BC1;
+}
+
+.userlist-table .button-primary {
     color: white;
     border: 3px solid #F23838;
     background-color: inherit;
 }
-
-.userlist-body-item .button-primary:hover{
+.userlist-table .button-primary:hover{
     background-color: #F23838;
 }
 
+  
+
+
+@media (max-width: 820px) {
+.userlist-table {
+    border: 0;
+}
+
+.userlist-table caption {
+    font-size: 1.3em;
+}
+
+.userlist-table thead {
+    border: none;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+}
+
+.userlist-table tr {
+    border: 3px solid rgb(221, 221, 221);
+    display: block;
+    margin-bottom: .625em;
+}
+
+.userlist-table td {
+    border-bottom: 1px solid #ddd;
+    display: block;
+    font-size: .8em;
+    text-align: right;
+}
+
+.userlist-table td::before {
+    /*
+    * aria-label has no advantage, it won't be read inside a table
+    content: attr(aria-label);
+    */
+    content: attr(data-label);
+    float: left;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.userlist-table td:last-child {
+    border-bottom: 0;
+}
+
+.userlist-table .button-primary {
+    width: 60%;
+}
+
+}
+
+@media (max-width: 520px) {
+    .userlist-table .button-primary {
+        width: 95%;
+    }
+}
